@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/jonpy
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/jonpy/ChangeLog,v 1.14 2011/12/26 08:09:26 patrick Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/jonpy/ChangeLog,v 1.15 2012/06/01 13:02:47 ago Exp $
+
+  01 Jun 2012; Agostino Sarubbo <ago@gentoo.org> jonpy-0.10.ebuild:
+  Stable for amd64, wrt bug #418901
 
 *jonpy-0.10 (26 Dec 2011)
 
